# nnc2

./: .gitignore  Cargo.toml  README.md  config.example.toml  flake.nix  generate-entities.sh
api/: Cargo.toml
api/src/: config.rs  main.rs
api/src/routing/: mod.rs  user.rs  wallet.rs
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  user.rs  wallet.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230820_000001_create_tables.rs  main.rs
service/: Cargo.toml
service/src/: compound.rs  lib.rs  mutation.rs  query.rs
src/: config.rs  main.rs
src/database/: mod.rs
src/model/: account.rs  user.rs
src/routing/: mod.rs  user.rs
