[package]
name = "notnetcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.19", default-features = false, features = ["headers", "http1", "json", "macros", "matched-path", "tokio", "tower-log", "tracing"] }
eyre = "0.6.8"
figment = { version = "0.10.10", features = ["toml", "env"] }
serde = { version = "1.0.171", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.47"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
