[package]
name = "nnc-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.19", default-features = false, features = ["headers", "http1", "json", "macros", "matched-path", "tokio", "tower-log", "tracing"] }
eyre = "0.6.8"
figment = { version = "0.10.10", features = ["toml", "env"] }
nnc-entity = { version = "0.1.0", path = "../entity" }
nnc-service = { version = "0.1.0", path = "../service" }
sea-orm = { version = "0.12.2", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
serde = { version = "1.0.171", features = ["derive"] }
thiserror = "1.0.47"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
