[package]
name = "nnc-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "nnc_migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "0.12.2", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
